# worms

./: CMakeLists.txt  worms.cpp
test/: outgoing_weight.cpp  weight.cpp
worms-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  worms
worms-build/Testing/Temporary/: CTestCostData.txt
worms-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  outgoing_weight  weight
